--- a/spoonywritters/signup/style.css
+++ b/spoonywritters/signup/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 html,body{
-    background: #6665ee;
+    background: #f7f7fc;
     font-family: 'Poppins', sans-serif;
 }
 ::selection{
